<resources>
    <string name="app_name">ちるサポ</string>
    <string-array name="user_genderItems">
        <item>未回答</item>
        <item>男性</item>
        <item>女性</item>
    </string-array>
    <string name="user_id">ユーザーID</string>
    <string name="user_password">パスワード</string>
    <string name="user_login">ログイン</string>
    <string name="new_accout">アカウントを作成する</string>
    <string name="password_forget_button">パスワードを忘れましたか？</string>
    <string name="mail">ユーザーID or メールアドレス</string>
    <string name="mail_text">登録したメールアドレスを入力してください</string>
    <string name="send_text">送信</string>
    <string name="userid_mail_text">ユーザーID or メールアドレス</string>
    <!--    <string name="group_name">グループ名</string>-->
    <!--    <string name="group_id">グループID</string>-->
    <string name="new_Accout">アカウントを作成する</string>
    <string name="userId_mail_text">ユーザーID or メールアドレス</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="account_user_id">ユーザーID</string>
    <string name="account_name">名前</string>
    <string name="action_MenberList">メンバーの表示</string>
    <string name="action_Groupnumber_view">グループコードの表示</string>
    <string name="action_Group_invitation">グループに招待する</string>
    <string name="action_Leave_group">グループを脱退する</string>
    <string name="action_Forced_group_withdrawal">グループを脱退させる</string>
    <string name="action_Line">LINE</string>
    <string name="action_config">グループ設定</string>
    <string name="group">グループ</string>
    <string name="group_participation">グループに参加する</string>
    <string name="create_group">グループを作成する</string>
    <string name="menu_user">ユーザー</string>
    <string name="nav_config">設定</string>
    <string name="nav_logout">ログアウト</string>
    <string name="nav_timeline">タイムライン</string>
    <string name="app_post_add_loading_text">送信中</string>
    <string name="app_post_add_input">今日何があったの？</string>
    <string name="layout_post_content">投稿内容</string>
    <string name="layout_post_image01">投稿画像01</string>
    <string name="layout_post_image02">投稿画像02</string>
    <string name="layout_post_user_icon">ユーザーアイコン</string>
    <string name="layout_post_user_name">ユーザー名</string>
    <string name="layout_post_user_id">ユーザーID</string>
    <string name="bottom_navigation_var_title_home">ホーム</string>
    <string name="bottom_navigation_var_title_child">記録</string>
    <string name="bottom_navigation_var_title_calendar">カレンダー</string>
    <string name="bottom_navigation_var_title_album">アルバム</string>
    <string name="bottom_navigation_var_title_dress">試着</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_id">グループID</string>
    <string name="group_name">グループ名</string>
    <string name="time_line_message">グループを作成するか参加してください</string>
    <string name="title_activity_settings">設定</string>
    <string name="no_Coment">まだ何も投稿されていません。最初に投稿してみましょう！</string>
    <!-- プロフィール変更画面 -->
    <string name="change_profile_user_id">ユーザー名</string>
    <string name="change_profile_line_id">LINE ID</string>
    <string name="change_profile_introduction">自己紹介</string>
    <string name="change_profile_user_icon">ユーザーアイコン</string>
    <string name="change_profile_button">変更</string>
    <!-- きせかえ画面 -->
    <string name="dress_model_child_add">子どもモデル登録</string>
    <string name="dress_model_clothes_add">洋服モデル登録</string>
    <string name="dress_model_generate">背景透過モデル画像生成</string>
    <string name="dress_model_list">モデル一覧</string>
    <string name="dress_try_on">試着"</string>
    <string name="dress_try_on_photo">試着後写真一覧</string>
    <string name="dress_model_dialog_camera">カメラで撮影して生成</string>
    <string name="dress_model_dialog_file">ファイルを選択して生成</string>
    <string name="title_activity_group_setting">グループ設定</string>
    <string name="pin_code">PINコード</string>
    <string name="child_data_title">title</string>
    <string name="child_data_main">main</string>
    <string name="child_title_main">基本情報</string>
    <string name="child_vaccination">ワクチン</string>
    <string name="child_allergies">アレルギー</string>
    <string name="child_record">記録</string>
    <string name="action_add_body">成長を記録する</string>
    <string name="action_update_body">情報を変更する</string>
    <string name="action_add_image">画像を投稿する</string>
    <string name="action_add_user">子供情報を追加する</string>
    <string name="user_name" />
    <string name="user_birthday" />
    <string name="user_sex" />
    <string name="profile" />
    <string name="userChild" />
    <string name="child_name" />
    <string name="child_age" />
    <!-- アルバム画面 -->
    <string name="fragment_album_not_found_image">アップロードされた写真が見つかりません\n写真をアップロードしませんか？</string>
    <string name="fragment_album_upload">アップロード</string>
    <!-- 子ども情報 -->
    <string name="child_weigth">体重</string>
    <string name="child_heigth">身長</string>
    <string name="post_time">投稿時間</string>
    <string name="clothes_size">服のサイズ　</string>
    <string name="shoes_size">靴のサイズ</string>
    <string name="decision">決定</string>
    <string name="child_blood">血液型</string>
    <string name="child_gender">性別</string>
    <string name="child_birthday">誕生日</string>
    <string name="plus">+</string>
    <string name="vaccination">予防接種</string>

    <string-array name="clothesSize">
        <item>50cm</item>
        <item>60cm</item>
        <item>70cm</item>
        <item>80cm</item>
        <item>90cm</item>
        <item>100cm</item>
        <item>110cm</item>
        <item>120cm</item>
        <item>130cm</item>
        <item>140cm</item>
        <item>150cm</item>
        <item>160cm</item>
    </string-array>

    <!-- カレンダー画面 -->
    <string name="fragment_calendar_menu_edit">スケジュール編集</string>
    <string name="fragment_calendar_menu_delete">スケジュール削除</string>
    <string name="fragment_calendar_user_name">ユーザー名</string>
    <string name="fragment_calendar_title">タイトル</string>
    <string name="fragment_calendar_detail">内容</string>
    <string name="fragment_calendar_date">日付</string>
    <string name="fragment_calendar_edit">変更</string>
    <string name="fragment_calendar_line_remind">LINEでリマインド</string>
    <string name="fragment_calendar_add">登録</string>
    <string name="fragment_calendar_schedule_list">スケジュール一覧</string>
    <string name="child_add">追加する</string>
    <string name="child_id">子供ID</string>
    <string name="memo">メモ</string>
    <string name="face_add">顔情報を追加する</string>
</resources>
