<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_add_body"
        android:icon="@drawable/ic_plus_solid"
        android:title="@string/action_add_body" />

    <item
        android:id="@+id/action_add_image"
        android:icon="@drawable/ic_bottom_navigation_view_album"
        android:title="@string/action_add_image" />

    <item
        android:id="@+id/action_face_add"
        android:icon="@drawable/ic_user"
        android:title="@string/face_add" />

    <item
        android:id="@+id/action_update_body"
        android:icon="@drawable/ic_pen"
        android:title="@string/action_update_body" />

    <item
        android:id="@+id/action_add_user"
        android:icon="@drawable/ic_address"
        android:title="@string/action_add_user" />

</menu>