<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_member_list"
        android:orderInCategory="100"
        android:title="@string/action_MenberList"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_group_invitation"
        android:orderInCategory="101"
        android:title="@string/action_Group_invitation"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_config"
        android:orderInCategory="102"
        android:title="@string/action_config"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_line"
        android:icon="@drawable/ic_line"
        android:orderInCategory="105"
        android:title="@string/action_Line"
        app:showAsAction="ifRoom" />
</menu>
