<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="jp.ac.asojuku.st.chirusapo.ui.home.HomeFragment"
        android:label="@string/nav_timeline"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_group_participation"
        android:name="jp.ac.asojuku.st.chirusapo.ui.gallery.GalleryFragment"
        android:label="@string/group_participation"
        tools:layout="@layout/fragment_group_participation" />

    <fragment
        android:id="@+id/nav_create_group"
        android:name="jp.ac.asojuku.st.chirusapo.ui.slideshow.SlideshowFragment"
        android:label="@string/create_group"
        tools:layout="@layout/fragment_create_group" />

    <fragment
        android:id="@+id/nav_config"
        android:name="jp.ac.asojuku.st.chirusapo.ui.tools.ToolsFragment"
        android:label="@string/nav_config"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="jp.ac.asojuku.st.chirusapo.ui.share.ShareFragment"
        android:label="@string/nav_logout"
        tools:layout="@layout/fragment_share" />

</navigation>