<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="71dp"
        android:layout_height="75dp"
        android:layout_margin="10sp"
        android:contentDescription="@string/layout_post_user_icon"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/icon_user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout_post_user_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout_post_user_id"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout_post_content"
            android:textSize="20sp"
            android:visibility="gone" />

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" />
        </HorizontalScrollView>

    </LinearLayout>

</LinearLayout>